# perplexity-deep-research

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/perplexity_deep_research/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
