[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-deep-research"
dynamic = ["version"]
description = "Single-shot Perplexity Deep Research CLI via OpenRouter — research any topic, save citations to markdown"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Zivkovic"}
]
keywords = ["perplexity", "deep-research", "openrouter", "research", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
perplexity-deep-research = "perplexity_deep_research.cli:main"

[project.urls]
Homepage = "https://github.com/dzivkovi/perplexity-deep-research"
Repository = "https://github.com/dzivkovi/perplexity-deep-research"
Issues = "https://github.com/dzivkovi/perplexity-deep-research/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools_scm]
# Version derived from git tags (e.g., v0.2.0 → 0.2.0). Single source of truth.
# Between tags: PEP 440 dev marker auto-appended (e.g., 0.2.1.dev3).
# no-local-version drops the +g{hash} segment so PyPI uploads work without manual mangling.
local_scheme = "no-local-version"
